welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:12: error: Unmatched closing brace '}' ignored here
 }
 ^